[gd_scene load_steps=5 format=3 uid="uid://57wyfvo4j66d"]

[ext_resource type="Script" path="res://table.gd" id="1_hlulc"]
[ext_resource type="PackedScene" uid="uid://kfpyndohysur" path="res://mouse.tscn" id="1_slgo6"]
[ext_resource type="PackedScene" uid="uid://c14qgn4mnr2t8" path="res://photo_tile.tscn" id="6_0v0ta"]
[ext_resource type="PackedScene" uid="uid://b7uvmjlri1ud0" path="res://sticker_area.tscn" id="7_3abxk"]

[node name="Table" type="Node2D"]
script = ExtResource("1_hlulc")

[node name="background" type="Polygon2D" parent="."]
color = Color(0.380392, 0.607843, 0.670588, 1)
polygon = PackedVector2Array(37, 49, 1111, 48, 1111, 614, 37, 614)

[node name="active_area" type="Polygon2D" parent="background"]
position = Vector2(52, 124)
color = Color(0.219608, 0.509804, 0.509804, 1)
polygon = PackedVector2Array(284, 184, 800, 184, 802, 371, 287, 371)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Button" type="Button" parent="."]
offset_left = 906.0
offset_top = 378.0
offset_right = 1002.0
offset_bottom = 436.0
text = "publish"

[node name="start" type="Button" parent="."]
offset_left = 508.0
offset_top = 139.0
offset_right = 675.0
offset_bottom = 209.0
text = "start
"

[node name="photo_tile" parent="." instance=ExtResource("6_0v0ta")]
position = Vector2(609, 365)
layer_0/tile_data = PackedInt32Array(-262149, 65538, 0, -196613, 65538, 1, -131077, 65538, 2, -65541, 65538, 3, -5, 65538, 4, 65531, 65538, 5, 131067, 65538, 6, 196603, 65538, 7, 262139, 65538, 8, 327675, 65538, 9, -262148, 131074, 0, -196612, 131074, 1, -131076, 131074, 2, -65540, 131074, 3, -4, 131074, 4, 65532, 131074, 5, 131068, 131074, 6, 196604, 131074, 7, 262140, 131074, 8, 327676, 131074, 9, -262147, 196610, 0, -196611, 196610, 1, -131075, 196610, 2, -65539, 196610, 3, -3, 196610, 4, 65533, 196610, 5, 131069, 196610, 6, 196605, 196610, 7, 262141, 196610, 8, 327677, 196610, 9, -262146, 262146, 0, -196610, 262146, 1, -131074, 262146, 2, -65538, 262146, 3, -2, 262146, 4, 65534, 262146, 5, 131070, 262146, 6, 196606, 262146, 7, 262142, 262146, 8, 327678, 262146, 9, -262145, 327682, 0, -196609, 327682, 1, -131073, 327682, 2, -65537, 327682, 3, -1, 327682, 4, 196607, 327682, 7, 262143, 327682, 8, 327679, 327682, 9, -327680, 393218, 0, -262144, 393218, 1, -196608, 393218, 2, -131072, 393218, 3, -65536, 393218, 4, 65536, 393218, 6, 262144, 393218, 9, -327679, 458754, 0, -262143, 458754, 1, -196607, 458754, 2, -131071, 458754, 3, -65535, 458754, 4, 131073, 458754, 7, 196609, 458754, 8, 262145, 458754, 9, -327678, 524290, 0, -262142, 524290, 1, -196606, 524290, 2, -131070, 524290, 3, -65534, 524290, 4, 131074, 524290, 7, 196610, 524290, 8, 262146, 524290, 9, -327677, 589826, 0, -262141, 589826, 1, -196605, 589826, 2, -131069, 589826, 3, -65533, 589826, 4, 131075, 589826, 7, 196611, 589826, 8, 262147, 589826, 9, -327676, 655362, 0, -262140, 655362, 1, -196604, 655362, 2, -131068, 655362, 3, -65532, 655362, 4, 4, 655362, 5, 131076, 655362, 7, 196612, 655362, 8, 262148, 655362, 9, 196608, 393218, 8, 131072, 393218, 7, 131071, 327682, 6, 65535, 327682, 5, 65537, 458754, 6, 65538, 524290, 6, 65539, 589826, 6, 0, 393218, 5, 1, 458754, 5, 2, 524290, 5, 3, 589826, 5, 65540, 655362, 6)

[node name="sticker_area" parent="." instance=ExtResource("7_3abxk")]
position = Vector2(123, 244)

[node name="mouse" parent="." instance=ExtResource("1_slgo6")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_button_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_button_pressed"]
[connection signal="click" from="mouse" to="." method="_on_mouse_click"]
[connection signal="click" from="mouse" to="sticker_area" method="_on_mouse_click"]
[connection signal="unclick" from="mouse" to="sticker_area" method="_on_mouse_unclick"]
